# snoo-abandoned-bt-cue-supervisor

./: .gitignore  .gitmodules  CMakeLists.txt  SerialPortThread.cpp  SerialPortThread.h  SupervisorMainMindow.h  SupervisorMainWindow.cpp  SupervisorMainWindow.h  embed-supervisor.pro  main.cpp  snoo-cue-supervisor.pro  supervisormainwindow.ui
src/: AimingWidget.cpp  AimingWidget.h  ImuSensor.cpp  ImuSensor.h  LivePlot.cpp  LivePlot.h  PlottingHelpers.cpp  PlottingHelpers.h  SupervisorMainWindow.cpp  SupervisorMainWindow.h
ui/: supervisormainwindow.ui
